[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/terrain2.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Magic Town.mp3" type="AudioStream" id=3]
[ext_resource path="res://Scripts/Terrain2.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 614, 47 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 44, 302.5 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 30.5, 302.5 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 71.5, 44 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 64, 33 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 112.5, 22.5 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 87.5, 25 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 104.5, 33 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 110, 25.5 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 116, 28.5 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 137.5, 30.5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22.5, 13 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.5, 15 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12.5, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 18.5, 14 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8.5, 7 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 20.5, 9 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 20, 8.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 20, 9.5 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 54.5, 10 )

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 619.5, 205 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 242.75, 67.5 )

[node name="Terrain2" type="Node2D"]
script = ExtResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
position = Vector2( 490, 275 )
scale = Vector2( 1.71022, 0.727949 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 530, -32 )
shape = SubResource( 9 )
one_way_collision = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -44, 303.5 )
shape = SubResource( 10 )
one_way_collision = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1115.5, 302.5 )
shape = SubResource( 11 )
one_way_collision = true

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 166.5, 78 )
shape = SubResource( 12 )
one_way_collision = true

[node name="CollisionShape2D5" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 176, 211 )
shape = SubResource( 13 )
one_way_collision = true

[node name="CollisionShape2D6" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 187.5, 349.5 )
shape = SubResource( 14 )
one_way_collision = true

[node name="CollisionShape2D8" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 851.5, 98 )
shape = SubResource( 16 )
one_way_collision = true

[node name="CollisionShape2D9" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 843.5, 216 )
shape = SubResource( 17 )
one_way_collision = true

[node name="CollisionShape2D10" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 845, 350.5 )
shape = SubResource( 18 )
one_way_collision = true

[node name="CollisionShape2D11" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 857, 479.5 )
shape = SubResource( 19 )
one_way_collision = true

[node name="CollisionShape2D12" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 193.5, 480.5 )
shape = SubResource( 20 )
one_way_collision = true

[node name="Building1Area2D" type="Area2D" parent="."]
position = Vector2( 228, 524 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Building1Area2D"]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="Building2Area2D" type="Area2D" parent="."]
position = Vector2( 933, 526 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Building2Area2D"]
position = Vector2( -1, 1 )
shape = SubResource( 2 )

[node name="Building3Area2D" type="Area2D" parent="."]
position = Vector2( 866, 385 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Building3Area2D"]
position = Vector2( 0, 2 )
shape = SubResource( 4 )

[node name="Building4Area2D" type="Area2D" parent="."]
position = Vector2( 246, 383 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Building4Area2D"]
position = Vector2( 8.5, -1 )
shape = SubResource( 3 )

[node name="Building5Area2D" type="Area2D" parent="."]
position = Vector2( 171, 276 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Building5Area2D"]
position = Vector2( 6.5, -2 )
shape = SubResource( 5 )

[node name="Building6Area2D" type="Area2D" parent="."]
position = Vector2( 873, 262 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Building6Area2D"]
position = Vector2( 1.5, -3 )
shape = SubResource( 6 )

[node name="Building7Area2D" type="Area2D" parent="."]
position = Vector2( 164, 135 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Building7Area2D"]
position = Vector2( 4, -0.5 )
shape = SubResource( 7 )

[node name="Building8Area2D" type="Area2D" parent="."]
position = Vector2( 852, 137 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Building8Area2D"]
position = Vector2( -1, -3.5 )
shape = SubResource( 8 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="ExitToTerrain1Area2D" type="Area2D" parent="."]
position = Vector2( 508, 589 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitToTerrain1Area2D"]
position = Vector2( 1.5, 0 )
shape = SubResource( 21 )

[node name="OutOfBoundsArea2D" type="Area2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="OutOfBoundsArea2D"]
margin_left = -86.0
margin_top = -78.0
margin_right = 1149.0
margin_bottom = 330.0
color = Color( 0, 0, 0, 0.784314 )

[node name="Label" type="Label" parent="OutOfBoundsArea2D"]
margin_right = 1128.0
margin_bottom = 260.0
text = "NOT ACCESSIBLE IN DEMO"
align = 1
valign = 1
percent_visible = -0.0526316

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutOfBoundsArea2D"]
position = Vector2( 532.5, 126 )
shape = SubResource( 22 )

[node name="OutOfBoundsArea2D2" type="Area2D" parent="."]
position = Vector2( 1, 3 )

[node name="ColorRect" type="ColorRect" parent="OutOfBoundsArea2D2"]
margin_left = -88.0
margin_top = 326.0
margin_right = 399.0
margin_bottom = 450.0
color = Color( 0, 0, 0, 0.784314 )

[node name="Label" type="Label" parent="OutOfBoundsArea2D2"]
margin_left = 7.0
margin_top = 338.0
margin_right = 71.0
margin_bottom = 352.0
text = "NOT ACCESSIBLE IN DEMO"
align = 1
valign = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutOfBoundsArea2D2"]
position = Vector2( 156.25, 380 )
shape = SubResource( 23 )

[node name="Player" parent="." groups=["player"] instance=ExtResource( 2 )]
position = Vector2( 503, 539 )
scale = Vector2( 0.2, 0.2 )

[node name="class_scene" type="CanvasLayer" parent="."]

[connection signal="body_entered" from="Building1Area2D" to="." method="_on_Building1Area2D_body_entered"]
[connection signal="body_entered" from="Building2Area2D" to="." method="_on_Building2Area2D_body_entered"]
[connection signal="body_entered" from="Building3Area2D" to="." method="_on_Building3Area2D_body_entered"]
[connection signal="body_entered" from="ExitToTerrain1Area2D" to="." method="_on_ExitToTerrain1Area2D_body_entered"]
